syntax = "proto3";
package contact;

message Person {
  string name = 1;
  string email = 2;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 3;

}

message AddressBook {
  string id = 1;
  repeated Person people = 2;
}